<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Christian Louboutin</string>
	<string name="home">Home</string>
	<string name="notification">Notification</string>
	<string name="get_started">Get Started</string>
	<string name="login_or_sign_up">Login or Sign up</string>
	<string name="forgot_password"><u>Forgot Password</u></string>
	<string name="forgot_password_nu">Forgot Password</string>
	<string name="login">Login</string>
	<string name="hint_password">Password</string>
	<string name="email_or_phone_number_hint">Email or Phone number</string>
	<string name="create_an_account"><u>Create an Account</u></string>
	<string name="create_an_account_nu">Create an Account</string>
	<string name="login_to_christian_louboutin">Login to Christian Louboutin</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="next">Next</string>
	<string name="verification">Verification</string>
	<string name="enter_otp_code">Enter OTP Code</string>
	<string name="email_hint">Email</string>
	<string name="phonenumber_hint">Phone number</string>
	<string name="last_name_hint">Last name</string>
	<string name="hint_name">Name</string>
	<string name="policy_text_check"><![CDATA[I agree Conditions - Terms & Privacy Policy of Christian Louboutin.]]></string>
	<string name="enter_new_password">Enter new password</string>
	<string name="enter_again_new_password">Enter again new password</string>
	<string name="order">Order</string>
	<string name="profile">Profile</string>
	<string name="title_activity_product">ProductActivity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="search_history">Search History</string>
	<string name="you_may_also_like">You may also like</string>
	<string name="close">Close</string>
	<string name="checkout">Checkout</string>
	<string name="shopping_cart">Shopping Cart</string>
	<string name="subtract">-</string>
	<string name="plus">+</string>
	<string name="enter_promotion_code">Enter promotion code</string>
	<string name="delivery_option">1. Delivery option</string>
	<string name="eligible_for_free_shipping_nto_check_if_your_order_could_be_delivered_to_your_address">Eligible for free shipping.\nTo check if your order could be delivered to your address.</string>
	<string name="ship_to_address">Ship to address</string>
	<string name="click_and_collect"><![CDATA[Click & Collect]]></string>
	<string name="delivery_date">Delivery Date</string>
	<string name="order_items">Order Item(s)</string>
	<string name="payment_option">2. Payment Option</string>
	<string name="please_select_your_payment_option">Please select your payment option.</string>
	<string name="cash_on_delivery">Cash on Delivery</string>
	<string name="phone">Phone</string>
	<string name="email">Email</string>
	<string name="title_activity_choose_address">ChooseAddressActivity</string>
	<string name="choose_address">Choose Address</string>
	<string name="my_order">My Order</string>
	<string name="cart">Cart</string>
	<string name="wishlist">Wish List</string>
</resources>