<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context=".ui.checkout.CheckoutActivity">

	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?actionBarSize"
			android:drawablePadding="10dp"
			android:textSize="16sp"
			app:contentInsetLeft="0dp"
			app:contentInsetStart="0dp"
			app:contentInsetStartWithNavigation="0dp"
			app:navigationIcon="@drawable/ic_back"
			app:title="@string/checkout"
			app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />

	<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="15dp"
					android:fontFamily="@font/averta_std_bold"
					android:text="@string/delivery_option"
					android:textAllCaps="true"
					android:textColor="@color/black"
					android:textSize="18sp"
					android:textStyle="bold" />

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="10dp"
					android:text="@string/eligible_for_free_shipping_nto_check_if_your_order_could_be_delivered_to_your_address"
					android:textColor="@color/gray"
					android:textSize="16sp" />

			<include
					layout="@layout/device_line"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="15dp" />

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="15dp"
					android:fontFamily="@font/averta_std_bold"
					android:text="@string/ship_to_address"
					android:textAllCaps="true"
					android:textColor="@color/black"
					android:textSize="16sp"
					android:textStyle="bold" />

			<include
					android:id="@+id/currentAddressView"
					layout="@layout/item_address"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:fontFamily="@font/averta_std_bold"
					android:text="@string/delivery_date"
					android:textAllCaps="true"
					android:textColor="@color/black"
					android:textSize="16sp"
					android:textStyle="bold" />


			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:padding="15dp">

				<TextView
						android:id="@+id/shipFeeTextView"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="Shipping: $10"
						android:textColor="@color/black"
						android:textSize="17sp"
						android:textStyle="bold" />

				<TextView
						android:id="@+id/estimatedTimeTextView"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="5dp"
						android:layout_marginBottom="15dp"
						android:text="Estimated delivery time: 16/03/2022 - 23/03/2022"
						android:textColor="@color/black"
						android:textSize="15sp" />

				<include layout="@layout/device_line" />
			</LinearLayout>

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="15dp"
					android:fontFamily="@font/averta_std_bold"
					android:text="@string/order_items"
					android:textAllCaps="true"
					android:textColor="@color/black"
					android:textSize="16sp"
					android:textStyle="bold" />

			<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/orderCheckoutRecyclerView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					tools:itemCount="3"
					tools:listitem="@layout/item_order_checkout" />


			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="15dp"
					android:fontFamily="@font/averta_std_bold"
					android:text="@string/payment_option"
					android:textAllCaps="true"
					android:textColor="@color/black"
					android:textSize="18sp"
					android:textStyle="bold" />

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="10dp"
					android:text="@string/please_select_your_payment_option"
					android:textColor="@color/gray"
					android:textSize="16sp" />

			<androidx.cardview.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="15dp"
					app:cardCornerRadius="0dp">

				<RadioButton
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:buttonTint="@color/black"
						android:fontFamily="@font/averta_std_bold"
						android:text="@string/cash_on_delivery"
						android:textAllCaps="true"
						android:textSize="15sp"
						android:textStyle="bold" />
			</androidx.cardview.widget.CardView>

			<Button
					android:id="@+id/orderButton"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="20dp"
					android:background="@color/black"
					android:text="@string/order"
					android:textStyle="bold" />
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>