<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/childFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/averta_std_bold"
                    android:text="@string/create_an_account_nu"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/enterLastName"
                        style="@style/AuthEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="7.5dp"
                        android:layout_weight="1"
                        android:hint="@string/last_name_hint"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/enterName"
                        style="@style/AuthEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="7.5dp"
                        android:layout_weight="1"
                        android:hint="@string/hint_name"
                        android:maxLines="1" />
                </LinearLayout>

                <EditText
                    android:id="@+id/enterPhoneNumber"
                    style="@style/AuthEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phonenumber_hint"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/enterEmail"
                    style="@style/AuthEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_hint"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/enterNewPassword"
                    style="@style/AuthEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_password"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/enterAgainNewPassword"
                    style="@style/AuthEditTextStyle"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_again_new_password"
                    android:maxLines="1" />

                <CheckBox
                    android:id="@+id/checkedPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/policy_text_check"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black"
                    android:text="@string/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>