<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/childFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/averta_std_bold"
                android:text="@string/login_to_christian_louboutin"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <EditText
                android:id="@+id/enterEmailOrPhoneNumber"
                style="@style/AuthEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:hint="@string/email_or_phone_number_hint"
                android:maxLines="1" />

            <EditText
                android:id="@+id/enterNewPassword"
                style="@style/AuthEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                android:id="@+id/forgotPasswordClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:paddingVertical="5dp"
                android:text="@string/forgot_password"
                android:textSize="17sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/createAnAccountClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="5dp"
                android:text="@string/create_an_account"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>