<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/childFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="15dp"
          android:fontFamily="@font/averta_std_bold"
          android:text="@string/forgot_password_nu"
          android:textColor="@color/black"
          android:textSize="30sp"
          android:textStyle="bold"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/toolbar" />

      <EditText
          android:id="@+id/enterEmailOrPhoneNumber"
          style="@style/AuthEditTextStyle"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:layout_marginHorizontal="15dp"
          android:layout_marginTop="30dp"
          android:hint="@string/email_or_phone_number_hint"
          android:maxLines="1" />

      <Button
          android:id="@+id/nextButton"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginHorizontal="15dp"
          android:layout_marginTop="20dp"
          android:background="@color/black"
          android:text="@string/next"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>