<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?actionBarSize"
			android:drawablePadding="10dp"
			android:textSize="16sp"
			app:contentInsetLeft="0dp"
			app:contentInsetStart="0dp"
			app:contentInsetStartWithNavigation="0dp"
			app:navigationIcon="@drawable/ic_back"
			app:title="@string/shopping_cart"
			app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />

	<androidx.core.widget.NestedScrollView
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="1">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:orientation="vertical">

			<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/cartRecyclerView"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					tools:itemCount="2"
					tools:listitem="@layout/item_cart" />

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="15dp"
					android:background="@color/whitesmoke"
					android:orientation="vertical"
					android:padding="15dp">

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="Need Helps ?"
						android:textAllCaps="true"
						android:textColor="@color/black" />

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:text="Available Monday to Friday 8am - 11pm GMT and Saturday to Sunday 9am - 9pm GMT." />

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="15dp"
						android:orientation="horizontal">

					<com.google.android.material.button.MaterialButton
							android:id="@+id/phoneButton"
							android:layout_width="0dp"
							android:layout_height="40dp"
							android:layout_marginEnd="7.5dp"
							android:layout_weight="1"
							android:backgroundTint="@color/whitesmoke"
							android:elevation="0dp"
							android:insetLeft="0dp"
							android:insetTop="0dp"
							android:insetRight="0dp"
							app:cornerRadius="0dp"
							android:insetBottom="0dp"
							android:padding="0dp"
							android:stateListAnimator="@null"
							android:text="@string/phone"
							android:textColor="@color/black"
							app:strokeColor="@color/gray"
							app:strokeWidth="1dp" />

					<com.google.android.material.button.MaterialButton
							android:layout_width="0dp"
							android:layout_height="40dp"
							android:layout_marginEnd="7.5dp"
							android:layout_weight="1"
							android:backgroundTint="@color/whitesmoke"
							android:elevation="0dp"
							android:insetLeft="0dp"
							android:insetTop="0dp"
							android:insetRight="0dp"
							android:insetBottom="0dp"
							android:padding="0dp"
							app:cornerRadius="0dp"
							android:stateListAnimator="@null"
							android:text="@string/email"
							android:textColor="@color/black"
							app:strokeColor="@color/gray"
							app:strokeWidth="1dp" />

				</LinearLayout>
			</LinearLayout>


			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					android:orientation="horizontal"
					android:paddingHorizontal="5dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:padding="10dp"
						android:text="Ship fee"
						android:textColor="@color/gray"
						android:textSize="16sp" />

				<TextView
						android:id="@+id/shipFeeTextView"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="right"
						android:padding="10dp"
						android:text="$50"
						android:textColor="@color/gray"
						android:textSize="16sp"
						tools:ignore="RtlHardcoded" />
			</LinearLayout>


			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/white"
					android:orientation="horizontal"
					android:paddingHorizontal="5dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center_vertical|left"
						android:padding="10dp"
						android:text="Subtotal"
						android:textColor="@color/gray"
						android:textSize="16sp" />

				<TextView
						android:id="@+id/subtotal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right"
						android:padding="10dp"
						android:text="$2800"
						android:textColor="@color/gray"
						android:textSize="16sp"
						tools:ignore="RtlHardcoded" />
			</LinearLayout>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/white"
					android:orientation="horizontal"
					android:paddingHorizontal="5dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center_vertical|left"
						android:padding="10dp"
						android:text="Discount"
						android:textColor="@color/gray"
						android:textSize="16sp" />

				<TextView
						android:id="@+id/discount"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right"
						android:padding="10dp"
						android:text="$10"
						android:textColor="@color/gray"
						android:textSize="16sp"
						tools:ignore="RtlHardcoded" />

			</LinearLayout>

			<include
					layout="@layout/device_line"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:layout_marginHorizontal="15dp" />

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:background="@color/white"
					android:orientation="horizontal"
					android:paddingHorizontal="5dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:fontFamily="@font/averta_std_bold"
						android:gravity="center_vertical|left"
						android:padding="10dp"
						android:text="Total"
						android:textAllCaps="true"
						android:textColor="@color/black"
						android:textSize="17sp"
						android:textStyle="bold" />

				<TextView
						android:id="@+id/totalTextView"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:fontFamily="@font/averta_std_bold"
						android:gravity="right"
						android:padding="10dp"
						android:text="$2860"
						android:textColor="@color/black"
						android:textSize="17sp"
						android:textStyle="bold"
						tools:ignore="RtlHardcoded" />
			</LinearLayout>

			<Button
					android:id="@+id/checkoutButton"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginHorizontal="15dp"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="20dp"
					android:background="@color/black"
					android:text="@string/checkout"
					android:textStyle="bold"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent" />
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>